--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-ctransformers==0.2.5
-sentence-transformers==2.2.2
+ctransformers
+sentence-transformers
 pinecone-client
-langchain==0.0.225
+langchain
 flask
+python-dotenv
+-e .
